tests/ui/traits/method-private.stderr
error[E0624]: method `method` is private
  --> $DIR/method-private.rs:19:9
   |
LL |         fn method(&self) {}
   |         ---------------- private method defined here
...
LL |     foo.method();
   |         ^^^^^^ private method
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
   |
LL | use inner::Bar;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0624`.
